# Sreda-Engine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Config/: default_engine.json
Editor/: CMakeLists.txt
Editor/appdata/: app.aps  app.rc
Editor/src/: Editor.cpp
Editor/src/Editor/Input/: EditorInputComponent.cpp  EditorInputComponent.h
Editor/src/Editor/UI/Framework/: UIEditorBase.cpp  UIEditorBase.h
Editor/src/Editor/UI/Main/: UIEMain.cpp  UIEMain.h  UIEMainBar.cpp  UIEMainBar.h
Editor/src/Editor/UI/Main/Windows/: UIEAbout.cpp  UIEAbout.h
Editor/src/Editor/Widgets/: EditorDemoWidget.cpp  EditorDemoWidget.h  EditorDockingDemo.cpp  EditorDockingDemo.h  EditorMainWidget.cpp  EditorMainWidget.h  EditorMenuBar.cpp  EditorMenuBar.h
Editor/src/Engine/: EditorApp.cpp  EditorApp.h  EditorEngineInstance.cpp  EditorEngineInstance.h  EditorInstance.cpp  EditorInstance.h  ImGuiLayer.cpp  ImGuiLayer.h
Engine/: CMakeLists.txt
Engine/Config/: engine.json
Engine/Resources/Fonts/: COPYRIGHT.txt
Engine/Resources/Shaders/: Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Text.glsl  SimpleTexture.glsl  camera.frag  texture.frag  texture.vert  ui.frag  ui.vert
Engine/include/: Engine.h
Engine/src/: BaseEngine.h  config.h  main.cpp
Engine/src/Engine/Core/: Application.cpp  Application.h  EngineConfig.cpp  EngineConfig.h  EngineInstance.h  Event.h  GlobalConst.h  Log.cpp  Log.h  Math.h  ResourceManager.cpp  ResourceManager.h  Time.cpp  Time.h  Types.h
Engine/src/Engine/Core/App/: Application.cpp  Application.h  EngineInstance.h
Engine/src/Engine/Core/Base/: BaseEngine.h  CommandLine.h  EngineCore.cpp  EngineCore.h  Layer.cpp  Layer.h
Engine/src/Engine/Core/FileSystem/: AssetManager.cpp  AssetManager.h  BaseAssetLoaders.h  FileIO.cpp  FileIO.h  IVirtualFileSystem.h  NativeFileSystem.h  ResourceManager.cpp  ResourceManager.h
Engine/src/Engine/Core/Integration/: CustomGenerationInstance.h
Engine/src/Engine/Core/Utilities/: EngineUtils.h  Event.h  Log.h  LogSystem.cpp  LogSystem.h  Math.h  Time.cpp  Time.h  TypeLib.h  Types.cpp  Types.h
Engine/src/Engine/Input/: IInputListen.cpp  IInputListen.h  Input.cpp  Input.h  InputCodes.h  InputListen.cpp  InputListen.h  KeyCodes.h
Engine/src/Engine/Input/InputAPI/InputGLF3/: InputGLF3.cpp  InputGLF3.h
Engine/src/Engine/Input/InputAPI/InputGLFW/: InputGLFW.cpp  InputGLFW.h
Engine/src/Engine/Platform/: IWindow.cpp  IWindow.h  PlatformTypes.h  PlatformUtils.cpp  PlatformUtils.h  WindowManager.cpp  WindowManager.h  WindowManagerAPIFactory.cpp  WindowManagerAPIFactory.h
Engine/src/Engine/Platform/WindowAPI/WindowGLF3/: WindowGLF3.cpp  WindowGLF3.h
Engine/src/Engine/Platform/WindowAPI/WindowGLFW/: WindowGLFW.cpp  WindowGLFW.h
Engine/src/Engine/Render/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Render.cpp  Render.h  RenderAPIFactory.cpp  RenderAPIFactory.h  RenderCommand.cpp  RenderCommand.h  RenderTypes.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  Vertex.cpp  Vertex.h
Engine/src/Engine/Render/Camera/: EditorCamera.cpp  EditorCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h
Engine/src/Engine/Render/Components/: Component.h  Material.cpp  Material.h  Mesh.h  Object.cpp  Object.h
Engine/src/Engine/Render/Font/: Font.cpp  Font.h  MSDFData.h
Engine/src/Engine/Render/RHI/: RHIBuffer.h  RHICommandBuffer.h  RHIPipline.h  RHIShader.h
Engine/src/Engine/Render/RenderAPI/OpenGL/: OpenGLRender.cpp  OpenGLRender.h  OpenGLShader.cpp  OpenGLShader.h
Engine/src/Engine/Render/Tools/: MeshFactory
Engine/src/Engine/Scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
Engine/src/Engine/UI/Elements/: Container.cpp  Container.h  Element.cpp  Element.h
Engine/src/Engine/UI/Elements/BaseElement/: Container.cpp  Container.h  Element.cpp  Element.h
Engine/src/Engine/UI/Elements/WidgetBaseElement/: UIButton.cpp  UIButton.h  UICheckBox.cpp  UICheckBox.h  UIComboBox.cpp  UIComboBox.h  UIContextMenu.cpp  UIContextMenu.h  UIEditText.cpp  UIEditText.h  UIImage.cpp  UIImage.h  UILineEdit.cpp  UILineEdit.h  UIProgressBar.cpp  UIProgressBar.h  UIScrollBox.cpp  UIScrollBox.h  UISliderBox.cpp  UISliderBox.h  UISpinBox.cpp  UISpinBox.h  UITextBlock.cpp  UITextBlock.h  UITextEdit.cpp  UITextEdit.h
Engine/src/Engine/UI/Framework/: IUIContext.cpp  IUIContext.h  IUISystem.cpp  IUISystem.h  UIBuilder.h  UIElement.cpp  UIElement.h  UIRender.h  UIRenderCommandList.cpp  UIRenderCommandList.h  UIRenderType.h  UISystem.cpp  UISystem.h  UITypes.h  UIWidget.cpp  UIWidget.h
Engine/src/Engine/UI/Nuclear/: NuclearUIContext.cpp  NuclearUIContext.h  UINuclearRender.cpp  UINuclearRender.h
Engine/src/Engine/UI/Widgets/Base/: UIInitWindow.cpp  UIInitWindow.h
Engine/src/Engine/UI/Widgets/Editor/: EditorTabContainer.cpp  EditorTabContainer.h  EditorTabHeader.cpp  EditorTabHeader.h
Engine/src/Engine/UI/Widgets/Editor/EditorMainMenuBar/: EditorMainMenuBar.cpp  EditorMainMenuBar.h  EditorMainMenuBarContainer.cpp  EditorMainMenuBarContainer.h
Engine/src/Platform/RenderAPI/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertex.cpp  OpenGLVertex.h
Engine/src/Platform/UIAPI/Nuclear/: NuclearUIContext.cpp  NuclearUIContext.h  UINuclearRender.h
Engine/src/Platform/UIAPI/UISreda/: UISredaContext.cpp  UISredaContext.h
Engine/src/Platform/WindowAPI/WindowGLFW/: InputGLFW.cpp  InputGLFW.h  WindowGLFW.cpp  WindowGLFW.h  WindowGLFWManager.cpp  WindowGLFWManager.h
Game/: CMakeLists.txt
Game/appdata/: app.rc
Game/src/: Game.cpp
(+1 files in other folders)
